--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div id="fixed_background_layer">
-        <img src="./resource/img/fixed_bg_3.jpg" alt="a boiling pot full of golden kernels">
+        <img src="./resource/img/fixed_bg_3.jpg" alt="Cinematic close-up of boiling golden corn kernels">
     </div>
 
     <nav class="royal_navbar">
@@ -47,7 +47,7 @@
 
     <main>
         <section id="hero_section">
-            <img src="./resource/img/001.jpg" alt="Golden Corn Field">
+            <img src="./resource/img/001.jpg" alt="Expansive golden corn field ready for harvest under dramatic lighting">
             <div class="hero_text_container">
                 <h2 class="hero_subtitle">Preserving the Lost Standard of Ambrosia</h2>
                 <h1 class="hero_title">CORN HUB</h1>
@@ -58,7 +58,7 @@
         </section>
 
         <section id="philosophy_section">
-            <img src="./resource/img/002.png" alt="Heirloom Corn Detail">
+            <img src="./resource/img/002.png" alt="Detailed macro shot of an heirloom corn cob with golden husks">
             <div class="legacy_overlay">
                 <article class="legacy_text_container">
                     <h2 class="royal_golden_text legacy_header">Beyond Sustenance.<br>An Experience.</h2>
@@ -82,11 +82,11 @@
             <div class="sensory_cards_row">
                 <article class="sensory_card">
                     <div class="sensory_image_frame">
-                        <img src="./resource/img/005.png" alt="Crystalline Texture">
+                        <img src="./resource/img/005.png" alt="Macro texture of a crispy golden corn flake structure">
                     </div>
                     <div class="sensory_text">
                         <div class="sensory_slash">
-                            <img src="./resource/img/golden_slash_2.png" alt="Divider">
+                            <img src="./resource/img/golden_slash_2.png" alt="Golden decorative divider">
                         </div>
                         <h3 class="sensory_title">Crystalline Fracture</h3>
                         <p class="sensory_desc">
@@ -97,11 +97,11 @@
 
                 <article class="sensory_card">
                     <div class="sensory_image_frame">
-                        <img src="./resource/img/006.png" alt="Ethereal Aroma">
+                        <img src="./resource/img/006.png" alt="Steaming hot corn dish emitting aromatic vapor">
                     </div>
                     <div class="sensory_text">
                         <div class="sensory_slash">
-                            <img src="./resource/img/golden_slash_2.png" alt="Divider">
+                            <img src="./resource/img/golden_slash_2.png" alt="Golden decorative divider">
                         </div>
                         <h3 class="sensory_title">Olfactory Standard</h3>
                         <p class="sensory_desc">
@@ -112,11 +112,11 @@
 
                 <article class="sensory_card">
                     <div class="sensory_image_frame">
-                        <img src="./resource/img/007.png" alt="Profound Complexity">
+                        <img src="./resource/img/007.png" alt="Close-up of a perfect buttery corn kernel">
                     </div>
                     <div class="sensory_text">
                         <div class="sensory_slash">
-                            <img src="./resource/img/golden_slash_2.png" alt="Divider">
+                            <img src="./resource/img/golden_slash_2.png" alt="Golden decorative divider">
                         </div>
                         <h3 class="sensory_title">Gilded Paradox</h3>
                         <p class="sensory_desc">
@@ -128,7 +128,7 @@
         </section>
 
         <section id="selection_section">
-            <img src="./resource/img/004.png" alt="Dark Field Background">
+            <img src="./resource/img/004.png" alt="Silhouette of corn stalks in a dark field at twilight">
             <div class="selection_content">
                 <h3 class="royal_golden_text">One in a Million.<br><span class="highlight_italic">As Ordained</span></h3>
                 <p class="legacy_paragraph selection_desc">
@@ -152,7 +152,7 @@
                     </div>
                     <div class="allocation_card_body">
                         <div class="allocation_divider">
-                            <img src="./resource/img/golden_slash_2.png" alt="Divider">
+                            <img src="./resource/img/golden_slash_2.png" alt="Golden decorative divider">
                         </div>
                         <p class="inclusion_label">INCLUSION:</p>
                         <div class="inclusion_list">
@@ -172,7 +172,7 @@
                     </div>
                     <div class="allocation_card_body">
                         <div class="allocation_divider">
-                            <img src="./resource/img/golden_slash_2.png" alt="Divider">
+                            <img src="./resource/img/golden_slash_2.png" alt="Golden decorative divider">
                         </div>
                         <p class="inclusion_label">INCLUSION:</p>
                         <div class="inclusion_list">
@@ -193,7 +193,7 @@
                     </div>
                     <div class="allocation_card_body">
                         <div class="allocation_divider">
-                            <img src="./resource/img/golden_slash_2.png" alt="Divider">
+                            <img src="./resource/img/golden_slash_2.png" alt="Golden decorative divider">
                         </div>
                         <p class="inclusion_label">INCLUSION:</p>
                         <div class="inclusion_list">
@@ -211,7 +211,7 @@
         </section>
 
         <section id="sanctum_section">
-            <img src="./resource/img/contact_bg.png" alt="Sanctum Background" class="invitation_bg">
+            <img src="./resource/img/contact_bg.png" alt="Luxurious private dining room with butler service for exclusive corn tasting" class="invitation_bg">
             <div class="invitation_content">
                 <h2 class="invitation_title">THE INNER SANCTUM</h2>
                 <p class="invitation_subtitle">Strictly by Appointment.</p>
