--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Corn Hub - Preserving the Lost Standard of Ambrosia.">
-    <link rel="stylesheet" href="finalStyle.css">
+    <link rel="stylesheet" href="style.css">
     <title>Corn Hub</title>
 </head>
 <body>
